feat: isolate concurrent HTTP request execution